[package]
name = "webhooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["multipart", "json"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
csv = "1.1"
